borsh/tests/snapshots/test_recursive_structs__recursive_struct.snap
---
source: borsh/tests/test_recursive_structs.rs
expression: data
---
[
    5,
    0,
    0,
    0,
    116,
    104,
    114,
    101,
    101,
    2,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    0,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    116,
    119,
    111,
    0,
    0,
    0,
    0,
]
